# legacy

./: .gitignore  GOLDEN_MASTER.md  Makefile  README.md  Sequence_diagram.md  geneweb_test_plan.md
docs/: DEPLOYMENT.md  (+1 more)
geneweb_python/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUTHENTICATION_SUMMARY.md  CHANGES_DATABASE_MANAGEMENT.md  DEPENDENCIES_UPDATE.md  Dockerfile  Dockerfile.fly  Makefile  QUICK_START_AUTH.md  README.md  demo_multi_db.py  docker-compose.yml  docker-entrypoint.sh  fly.toml  fly_start.py  generate_secrets.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.py  security_demo.py  setup_github_actions.sh  simple_main.py  start_api.py  test_auth_enforcement.py  test_authentication.py  test_bcrypt_fix.py  test_database_ownership.py  test_full_workflow.sh
geneweb_python/config/: .encryption_salt
geneweb_python/docs/: ARCHITECTURAL_CHANGES.md  AUTHENTICATION_GUIDE.md  CALENDAR_IMPLEMENTATION_SUMMARY.md  CHANGELOG_DEPLOYMENT.md  COVERAGE_BADGE.md  DATABASE_API_INTEGRATION.md  DATABASE_API_INTEGRATION_STATUS.md  DATABASE_INTEGRATION_GUIDE.md  DATABASE_MANAGEMENT_FEATURES.md  DATABASE_OWNERSHIP_IMPLEMENTATION.md  DEPLOYMENT_FLY.md  DEPLOYMENT_QUICK_START.md  DEVELOPER_GUIDE.md  DOCUMENTATION_STATUS.md  FRONTEND_INTEGRATION.md  GDPR_COMPLIANCE.md  GITHUB_ACTIONS_SETUP.md  MAKEFILE_API_COMMANDS.md  MULTI_DATABASE_MANAGEMENT.md  MULTI_DB_IMPLEMENTATION.md  PRECOMMIT_GUIDE.md  PRIVACY_POLICY.md  PRIVACY_SEARCH_DOCUMENTATION.md  PROJECT_MANAGEMENT_SUMMARY.md  README_API.md  SECURITY.md  TDD_GUIDE.md
geneweb_python/docs/API/: API_DOCUMENTATION.md  API_QUICK_REFERENCE.md  ARCHITECTURE_API.md  QUICK_START.md  README.md
geneweb_python/docs/archive/: BCRYPT_FIX.md  BCRYPT_FIX_SUMMARY.md  BCRYPT_MONKEY_PATCH.md  README.md
geneweb_python/docs/gdpr/: SALES_TEAM_GUIDE.md
geneweb_python/monitoring/: prometheus.yml
geneweb_python/scripts/: README.md  setup_dev.py  update_coverage_badge.py
geneweb_python/src/: __init__.py
geneweb_python/src/geneweb/: __init__.py
geneweb_python/src/geneweb/api/: __init__.py  config.py  dependencies.py  dependencies_old.py  main.py
geneweb_python/src/geneweb/core/: __init__.py  calendar.py  event.py  family.py  person.py  place.py  sosa.py  validation.py
geneweb_python/tests/: conftest.py  test_setup.py
geneweb_python/tests/e2e/: __init__.py  test_genealogy_workflows.py
geneweb_python/tests/fixtures/: search_fixtures.py
geneweb_python/tests/integration/: test_database.py  test_database_api_integration.py  test_database_management.py  test_family_api.py  test_genealogy_system_integration.py  test_multi_database_management.py  test_outbase.py  test_search_endpoints.py.skip
geneweb_python/tests/security/: README.md  test_privacy_rgpd_compliance.py.skip
geneweb_python/tests/unit/: test_avl.py  test_bidirectional_relationships.py  test_calendar.py  test_collection.py  test_database.py  test_db_gc.py  test_dbdisk.py  test_driver.py  test_dutil.py  test_event.py  test_family.py  test_family_sosa_propagation.py  test_gutil.py  test_iovalue.py  test_outbase.py  test_person.py  test_place.py  test_relationship_validation.py  test_sosa.py  test_sosa_inheritance.py
(+212 files in other folders)
